[core] :white_check_mark: Update/add tests
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>